--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -121,6 +121,7 @@ header {
 #calcados .container{
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 100px;
 }
 #calcados .container button{
     display: flex;
@@ -131,6 +132,17 @@ header {
     color: white;
     background-color: #9A3B3B;
     border-radius: 20px;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 100;
+    margin-top: 20px;
+    margin-left: 20px;
+    border: none;
+    cursor: pointer;
 }
 
-
+#calcados .container span{
+    width: 274px;
+    height: 271px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
