--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -146,3 +146,9 @@ header {
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+#calcados .container .tenis img{
+    transition: all 1s;
+}
+#calcados .container .tenis img:hover{
+    transform: translateY(-10px);
+}
