--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -118,12 +118,14 @@ header {
     font-family: 'Roboto Slab', serif;
     margin-top: -10px;
 }
-#calcados .container{
+#calcados .container,
+#acessorios .container{
     flex-direction: row;
     flex-wrap: wrap;
     gap: 100px;
 }
-#calcados .container button{
+#calcados .container button,
+#acessorios .container button{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -140,15 +142,52 @@ header {
     cursor: pointer;
 }
 
-#calcados .container span{
+#calcados .container span,
+#acessorios .container span{
     width: 274px;
     height: 271px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-#calcados .container .tenis img{
+#calcados .container .tenis img,
+#acessorios .container .acessorios img{
     transition: all 1s;
 }
-#calcados .container .tenis img:hover{
+#calcados .container .tenis img,
+#acessorios .container .acessorios img:hover{
     transform: translateY(-10px);
+}
+
+footer{
+    background-color: black;
+    height: 300px;
+    color: white;
+    justify-content: space-around;
+    flex-direction: column;
+    font-family: 'Roboto Slab', serif;
+    font-size: 13px;
+    margin-top: -20px;
+}
+footer .container{
+    justify-content: space-around;
+    align-items: center;
+}
+footer li a{
+    text-decoration: none;
+    color: #ADADAD;
+    
+}
+footer li{
+    list-style: none;
+}
+
+footer p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    font-size: 10px;
+}
+.explore{
+    margin-top: 40px;
 }
