--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,6 +40,10 @@ header {
     font-family: 'Roboto Slab', serif;
     font-size: 15px;
 }
+.links li a:hover{
+    transition: all 0.3s;
+    color: #9A3B3B;
+}
 .links ion-icon{
     font-size: 25px;
     cursor: pointer;
@@ -111,12 +115,14 @@ header {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#calcados p{
+#calcados p,
+#acessorios p{
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Roboto Slab', serif;
-    margin-top: -10px;
+    margin-top: 13px;
+    color: #4d4d4d;
 }
 #calcados .container,
 #acessorios .container{
@@ -137,7 +143,7 @@ header {
     font-family: 'Roboto Slab', serif;
     font-weight: 100;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 22px;
     border: none;
     cursor: pointer;
 }
@@ -153,7 +159,7 @@ header {
 #acessorios .container .acessorios img{
     transition: all 1s;
 }
-#calcados .container .tenis img,
+#calcados .container .tenis span img,
 #acessorios .container .acessorios img:hover{
     transform: translateY(-10px);
 }
