--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -202,18 +202,22 @@ footer p{
     position: fixed;
     top: 0;
     right: 0;
-    width: 360px;
+    width: 300px;
     min-height: 100vh;
     padding: 20px;
     background-color: #fffef3;
     box-shadow: -2px 0 4px hsl(0, 4%, 15% / 10%);
+    transition: 0.3s;
 }
-
+.cart.active{
+    right: 0;
+}
 .cart-title{
     text-align: center;
     font-size: 1.5rem;
     font-weight: 600;
     margin: 2rem;
+    font-family: 'Roboto Slab', serif;
 }
 
 .cart-box{
@@ -239,4 +243,62 @@ footer p{
 .cart-product-title{
     font-size: 1rem;
     text-transform: uppercase;
+}
+
+.cart-price{
+    font-weight: 500;
+}
+.cart-quantity{
+    border: 1px solid whitesmoke;
+    outline-color: black;
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.cart-remove{
+    font-size: 24px;
+    color: red;
+    cursor: pointer;
+}
+
+.total{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid black;
+}
+
+.total-title{
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.total-price{
+    margin-left: 0.5rem;
+}
+
+.btn-buy{
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    background-color: rgb(255, 44, 44);
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+}
+
+.btn-buy:hover{
+    background-color:rgb(223, 29, 29);
+}
+
+#close-cart{
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
+    font-size: 2rem;
+    color: black;
+    cursor: pointer;
 }
